--- a/autres_projets.html
+++ b/autres_projets.html
@@ -16,8 +16,8 @@
 <body class=" ">
 <header>
     <div class="ligne"></div>
-    <a href="index.html"><img class="logo" src="img/logo.png" alt="Logo du site"></a>
-    <h1>J.A.R.V.I.S</h1>
+    <img class="logo" src="img/logo.png" alt="Logo du site">
+    <a href="./index.html"><h1>J.A.R.V.I.S</h1></a>
     <div class="nav-toggle" onclick="document.documentElement.classList.toggle('menu-open')">
         <div class="nav-toggle-bar"></div>
     </div>
