--- a/homme_en_armure.html
+++ b/homme_en_armure.html
@@ -16,8 +16,8 @@
 <body class=" ">
 <header>
     <div class="ligne"></div>
-    <a href=""><img class="logo" src="img/logo.png" alt="Logo du site"></a>
-    <h1>J.A.R.V.I.S</h1>
+    <img class="logo" src="img/logo.png" alt="Logo du site">
+    <a href="./index.html"><h1>J.A.R.V.I.S</h1></a>
     <div class="nav-toggle" onclick="document.documentElement.classList.toggle('menu-open')">
         <div class="nav-toggle-bar"></div>
     </div>
@@ -45,7 +45,6 @@
     <p>Iron Man … Grâce à ses comics, ses trois films éponymes ou encore ses nombreuses apparitions dans les autres films de la franchise, il est devenu un héros incontournable de
         cette dernière, connu des plus petits comme des plus grands et interprété par Robert Downey Jr.</p>
     <img src="img/RobertDowneyJr.jpg" alt="Photo de Robert Downey Jr" class="imgRDJr">
-    <div class="bordernoir"></div>
     <h2 class="titre2">Création du personnage d'Iron Man</h2>
     <p class="p2">Le personnage d’Iron Man est un <br>super-héros imaginé et créé par Stan Lee, développé par Larry Lieber et dessiné par Don Heck. Sa première apparition se fait dans un comic de Marvel
         en 1963, et il obtient son propre comic en 1968, qui sera publié jusqu’en 1996 par l’éditeur.</p>
@@ -56,7 +55,6 @@
         propagande face à l’URSS. Douze ans après l’arrêt de publication des comics Iron-Man, le héros est adapté au cinéma, avec la sortie du premier des trois films Iron Man en 2008, qui
         marquera également le lancement du première acte de l’Univers Cinématographique Marvel (MCU).</p>
     <img src="img/StanLee.jpg" alt="Photo de Stan Lee" class="stanlee">
-    <div class="bordernoir2"></div>
     <h4 class="stanleest">Stan Lee, créateur de nombreux héros <br>de la franchise Marvel, <br>comme Spider Man, Docteur Strange, <br>Hulk, Thor et de nombreux autres.</h4>
     <h2>L'histoire d'Iron Man</h2>
     <p class="p4">Tony Stark est un riche homme d’affaires américain héritier de Stark Industries, entreprise d’armement militaire léguée par son père, Howard Stark, qui distribue des armes à
@@ -74,7 +72,6 @@
         (dont le film parle du combat entre JARVIS et une autre intelligence artificielle du nom d’Ultron), ainsi que dans Avengers : Endgame (où on le voit apparaître sous forme humaine au
         coté d’Howard Stark). JARVIS est un élément très important du MCU.</p>
     <img src="img/JARVIS.png" alt="J.A.R.V.I.S, l'IA d'Iron Man" class="JARVIS">
-    <div class="bordernoir3"></div>
     <p>L’intelligence Artificielle fait souvent forme de fantasme pour de nombreuses personnes, mais elle est peut-être notamment dangereuse, à cause de son auto apprentissage
         (appelé « Deep Learning »), ou alors de la pollution qu’elle cause. <br>C’est ce dernier point que nous étudieront dans le prochain article.</p>
     <h2 class="bouton"><a href="problemes_causes_par_ia.html">Lire l'article sur les problèmes causés par l'IA</a></h2>
