--- a/problemes_causes_par_ia.html
+++ b/problemes_causes_par_ia.html
@@ -15,8 +15,8 @@
 <body class=" ">
 <header>
     <div class="ligne"></div>
-    <a href=""><img class="logo" src="img/logo.png" alt="Logo du site"></a>
-    <h1>J.A.R.V.I.S</h1>
+    <img class="logo" src="img/logo.png" alt="Logo du site">
+    <a href="./index.html"><h1>J.A.R.V.I.S</h1></a>
     <div class="nav-toggle" onclick="document.documentElement.classList.toggle('menu-open')">
         <div class="nav-toggle-bar"></div>
     </div>
@@ -43,14 +43,12 @@
         assistants virtuels (Alexa, Google Home) etc., de nombreuses questions environnementales peuvent se poser, à l’heure où le
         réchauffement climatique est un sujet très important et dans toutes les bouches.</p>
     <img src="img/polutioniceberg.png" alt="Graphisme Polution Iceberg" class="polution">
-    <div class="bordernoir"></div>
     <h2>Que peut faire l'intelligence artificielle ?</h2>
     <p>L’intelligence artificielle peut prendre énormément de formes, que nous croisons quotidiennement, comme la traduction automatique, la détection de virus, la
         reconnaissance d’image, ou même les voitures connectées. Elle peut aussi réaliser des diagnostics médicaux, modérer des forums ou des réseaux sociaux, et même permettre à certains sites de vous faire des recommandations personnalisées et même créer des tableaux comme le faisait des artistes comme Vincent Van Gogh ou même Rembrandt. En
         2016, Google à réussit à créer une IA nommée « Google Alpha Go » capable de battre des champions de Go (jeu de société originaire de Chine, qui oppose deux joueurs qui doivent prendre le plus de terrain sur un plateau en bois). En effet, en 3 jours, elle a réussi à
         apprendre les règles du jeu, et à force de jouer face à eux, à devenir une experte de ce jeu de stratégie.</p>
     <img src="img/alphago.jpg" alt="Illustration du jeu de go" class="alphago">
-    <div class="bordernoir2"></div>
     <h2 class="titre3">Les problèmes causés par l’intelligence artificielle </h2>
     <p>À l’heure où l’intelligence artificielle est un domaine plus si futuriste que ça, des scientifiques commencent à se poser des questions et à faire des enquêtes pour savoir quels coûts environnementaux elle va engendrer.
         <br>
