--- a/solutions.html
+++ b/solutions.html
@@ -15,8 +15,8 @@
 <body class=" ">
 <header>
     <div class="ligne"></div>
-    <a href=""><img class="logo" src="img/logo.png" alt="Logo du site"></a>
-    <h1>J.A.R.V.I.S</h1>
+    <img class="logo" src="img/logo.png" alt="Logo du site">
+    <a href="./index.html"><h1>J.A.R.V.I.S</h1></a>
     <div class="nav-toggle" onclick="document.documentElement.classList.toggle('menu-open')">
         <div class="nav-toggle-bar"></div>
     </div>
@@ -45,7 +45,6 @@
         <br>Parmi eux, la pollution numérique, qui commence déjà à peser sur l’environnement. Que peut-on faire pour limiter les impacts environnementaux ?
         Est-il possible pour nous, simples consommateurs, de contribuer à cette limitation ?</p>
     <img src="img/polutioniceberg.png" alt="Graphisme Polution Iceberg" class="polution">
-    <div class="bordernoir"></div>
     <h4>Exemple de consommation à l'heure du numérique</h4>
     <h2>Quelles solutions pour empêcher la pollution numérique ?</h2>
     <p class="p2">Il existe plusieurs solutions pour réduire la pollution numérique en général, comme allonger au maximum la durée de vie de nos équipements,
@@ -61,13 +60,14 @@
         - Télécharger plutôt qu’utiliser le streaming !   Écouter sa musique sur une plateforme de streaming audio est meilleur que regarder un clip sur YouTube par exemple. Il faut également privilégier la télévision en TNT plutôt qu’avec l’ADSL … Le contraire de ce qui est recommandé par les publicités !
     </p>
     <img src="img/ordinateureteint.jpg" alt="Image ordinateur éteint">
-    <div class="bordernoir2"></div>
     <p>Pour rebondir sur les publicités, les entreprises peuvent aussi réduire leurs pollutions numériques, en simplifiant leurs conceptions, en retirant ce qu’on appelle le <br>« gras numérique ». (Les informations dont l’utilisateur n’a pas forcément besoin, qui ne sont donc
         pas utiles, mais prennent quand même de la place.)
         <br> <br>
         Ce sujet vous intéresse et vous souhaitez en apprendre plus sur la pollution numérique d’approches différentes ? N’hésitez pas à consulter les autres projets en cliquant <br>sur le bouton ci-dessous.
     </p>
     <h2 class="bouton"><a href="autres_projets.html">Voir les autres projets</a></h2>
+    <h2>Micro-Skype : Que pensez-vous de la pollution numérique ?</h2>
+    <video controls src='video/iron-man-trailer.mp4' type='video/mp4'></video>
 </main>
 <footer>
     <div class="ligne"></div>
