--- a/contact.html
+++ b/contact.html
@@ -15,8 +15,8 @@
 <body class=" ">
 <header>
     <div class="ligne"></div>
-    <a href=""><img class="logo" src="img/logo.png" alt="Logo du site"></a>
-    <h1>J.A.R.V.I.S</h1>
+    <img class="logo" src="img/logo.png" alt="Logo du site">
+    <a href="./index.html"><h1>J.A.R.V.I.S</h1></a>
     <div class="nav-toggle" onclick="document.documentElement.classList.toggle('menu-open')">
         <div class="nav-toggle-bar"></div>
     </div>
@@ -38,7 +38,7 @@
 <main>
     <h2>Contact</h2>
     <p>Vous avez une question à me poser ou vous souhaitez faire une remarque ? <br>Remplissez le formulaire ci-dessous !</p>
-    <form action="/my-handling-form-page" method="post">
+    <form method="post">
         <ul>
             <li>
                 <label for="name">Nom :</label>
