--- a/autres_projets.html
+++ b/autres_projets.html
@@ -5,6 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="icon" type="image/png" href="img/icon.png" />
     <link rel="stylesheet" href="css/lib/normalize.css"/>
     <link rel="stylesheet" href="css/mescss/typography.css"/>
     <link rel="stylesheet" href="css/mescss/layout.css"/>
@@ -48,37 +49,37 @@
     <section class="carousel">
         <ul class="carousel-items">
             <li class="carousel-item">
-                <a href=""><img src="img/projets/projet1.png" alt="Logo du projet de"></a>
+                <a href="http://projets1.jorislin.fr/"><img src="img/projets/projet1.png" alt="Logo du projet de Joris Lin"></a>
             </li>
             <li class="carousel-item">
-                <a href=""></a><img src="img/projets/projet2.png" alt="Logo du projet de">
+                <a href="http://projets1.zoelouyot.fr"></a><img src="img/projets/projet2.png" alt="Logo du projet de Zoé Louyot">
             </li>
             <li class="carousel-item">
-                <img src="img/projets/projet3.png" alt="Logo du projet de">
+                <a href=""><img src="img/projets/projet3.png" alt="Logo du projet de"></a>
             </li>
             <li class="carousel-item">
-                <img src="img/projets/projet4.png" alt="Logo du projet de">
+                <a href=""><img src="img/projets/projet4.png" alt="Logo du projet de"></a>
             </li>
             <li class="carousel-item">
-                <img src="img/projets/projet5.png" alt="Logo du projet de">
+                <a href="http://projets1.nicolaslouisin.fr/"><img src="img/projets/projet5.png" alt="Logo du projet de Nicolas Louisin"></a>
             </li>
             <li class="carousel-item">
-                <img src="img/projets/projet6.png" alt="Logo du projet de">
+                <a href="http://projets1.eucacile.fr"><img src="img/projets/projet6.png" alt="Logo du projet de Claire Oudot"></a>
             </li>
             <li class="carousel-item">
-                <img src="img/projets/projet7.png" alt="Logo du projet de">
+                <a href=""><img src="img/projets/projet7.png" alt="Logo du projet de"></a>
             </li>
             <li class="carousel-item">
-                <img src="img/projets/projet8.png" alt="Logo du projet de">
+                <a href=""><img src="img/projets/projet8.png" alt="Logo du projet de Sarah Hadri"></a>
             </li>
             <li class="carousel-item">
-                <img src="img/projets/projet9.png" alt="Logo du projet de">
+                <a href="http://projets1.charlesmangin.fr/"><img src="img/projets/projet9.png" alt="Logo du projet de Charles Mangin"></a>
             </li>
             <li class="carousel-item">
-                <img src="img/projets/projet10.png" alt="Logo du projet de">
+                <a href="http://projets1.benjasauvelemonde.fr/"><img src="img/projets/projet10.png" alt="Logo du projet de Benjamin Lugan"></a>
             </li>
             <li class="carousel-item">
-                <img src="img/projets/projet11.png" alt="Logo du projet de">
+                <a href="http://projets1.maellemarchal.fr"><img src="img/projets/projet11.png" alt="Logo du projet de Maëlle Marchal"></a>
             </li>
         </ul>
     </section>
