--- a/solutions.html
+++ b/solutions.html
@@ -5,6 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="icon" type="image/png" href="img/icon.png" />
     <link rel="stylesheet" href="css/lib/normalize.css"/>
     <link rel="stylesheet" href="css/mescss/typography.css"/>
     <link rel="stylesheet" href="css/mescss/layout.css"/>
@@ -67,7 +68,7 @@
     </p>
     <h2 class="bouton"><a href="autres_projets.html">Voir les autres projets</a></h2>
     <h2>Micro-Skype : Que pensez-vous de la pollution numérique ?</h2>
-    <video controls src='video/iron-man-trailer.mp4' type='video/mp4'></video>
+    <video controls src='video/micro-skype.mp4' type='video/mp4'></video>
 </main>
 <footer>
     <div class="ligne"></div>
